--- a/index.html
+++ b/index.html
@@ -4,28 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Your Online Videos</title>
-    <link rel="stylesheet" href="css/get_started_btn.css">
+    <!--<link rel="stylesheet" href="css/get_started_btn.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/header_text.css">
     <link rel="stylesheet" href="css/main_text.css">
-    <link rel="stylesheet" href="css/man.css">
+    <link rel="stylesheet" href="css/man.css">-->
+
+    <link rel="stylesheet" href="css/top_info_block.css">
+    <link rel="stylesheet" href="css/main_body.css">
+    <link rel="stylesheet" href="css/bottom_cards_block.css">
 </head>
 
-<body>
-<div>
-    <div class="main-text">
-        <div>
-            <h1 class="header">Create your online videos</h1>
+<body class="main-body">
+<div class="main-div">
+    <!-- верхний блок -->
+    <div class="top-info-block">
+        <div class="top-info-block_all-text">
+            <h1 class="top-info-block_header">Crearte your online videos</h1>
+            <p class="top-info-block_info-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum. Quam vel aliquam sit vulputate.</p>
+            <button class="top-info-block_button">Get started</button>
         </div>
-        <div>
-            <p class="header-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum. Quam vel aliquam sit vulputate.</p>
-        </div>
-        <div>
-            <button class="get-started-btn">Get started</button>
+        <div class="top-info-block_man-container">
+            <img src="./images/man.jpg" class="top-info-block_man-image" alt=""/>
         </div>
     </div>
-    <div >
-       <img class="man" src="images/man.jpg">
+    <div  class="bottom-cards-block">
+       <!-- Блок для карточек  -->
+        <div class="card card-first-bg">
+            <div class="card-header">
+                <span class="card-number">01</span>
+                <div class="card-icon">
+                    <img src="./images/youtube.png" alt="Icon" />
+                </div>
+            </div>
+            <h2 class="card-title">Title</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="card card-second-bg ">
+            <div class="card-header ">
+                <span class="card-number">02</span>
+                <div class="card-icon">
+                    <img src="./images/tiktok.png" alt="Icon" />
+                </div>
+            </div>
+            <h2 class="card-title">Title</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="card card-third-bg">
+            <div class="card-header">
+                <span class="card-number">03</span>
+                <div class="card-icon">
+                    <img src="./images/facebook.png" alt="Icon" />
+                </div>
+            </div>
+            <h2 class="card-title">Title</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+
+        <div class="card card-fourth-bg">
+            <div class="card-header">
+                <span class="card-number">04</span>
+                <div class="card-icon">
+                    <img src="./images/instagram.png" alt="Icon" />
+                </div>
+            </div>
+            <h2 class="card-title">Title</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+
     </div>
 </div>
 </body>
