--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Your Online Videos</title>
-    <!--<link rel="stylesheet" href="css/get_started_btn.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/header_text.css">
-    <link rel="stylesheet" href="css/main_text.css">
-    <link rel="stylesheet" href="css/man.css">-->
-
     <link rel="stylesheet" href="css/top_info_block.css">
     <link rel="stylesheet" href="css/main_body.css">
     <link rel="stylesheet" href="css/bottom_cards_block.css">
@@ -19,59 +13,69 @@
 <div class="main-div">
     <!-- верхний блок -->
     <div class="top-info-block">
-        <div class="top-info-block_all-text">
-            <h1 class="top-info-block_header">Crearte your online videos</h1>
-            <p class="top-info-block_info-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum. Quam vel aliquam sit vulputate.</p>
-            <button class="top-info-block_button">Get started</button>
+        <div class="top-info-block-all-text">
+            <h1 class="top-info-block-header">
+                Crearte your online videos
+            </h1>
+            <p class="top-info-block-info-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum. Quam vel aliquam sit vulputate.
+            </p>
+            <button class="top-info-block-button">
+                <span class="top-info-block__button-text"> Get started</span>
+            </button>
         </div>
-        <div class="top-info-block_man-container">
-            <img src="./images/man.jpg" class="top-info-block_man-image" alt=""/>
+        <div class="top-info-block-man-container">
+            <img src="./images/man.jpg" class="top-info-block__man-image" alt=""/>
         </div>
     </div>
     <div  class="bottom-cards-block">
        <!-- Блок для карточек  -->
-        <div class="card card-first-bg">
-            <div class="card-header">
-                <span class="card-number">01</span>
-                <div class="card-icon">
+        <div class="card
+                    card__background-color-first">
+            <div class="card__header">
+                <span class="card__number">01</span>
+                <div class="card__icon">
                     <img src="./images/youtube.png" alt="Icon" />
                 </div>
             </div>
-            <h2 class="card-title">Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h2 class="card__title">Title</h2>
+            <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
 
-        <div class="card card-second-bg ">
-            <div class="card-header ">
-                <span class="card-number">02</span>
-                <div class="card-icon">
+        <div class="card
+                    card__background-color-second ">
+            <div class="card__header ">
+                <span class="card__number">02</span>
+                <div class="card__icon">
                     <img src="./images/tiktok.png" alt="Icon" />
                 </div>
             </div>
-            <h2 class="card-title">Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h2 class="card__title">Title</h2>
+            <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
 
-        <div class="card card-third-bg">
-            <div class="card-header">
-                <span class="card-number">03</span>
-                <div class="card-icon">
+        <div class="card
+                    card__background-color-third">
+            <div class="card__header">
+                <span class="card__number">03</span>
+                <div class="card__icon">
                     <img src="./images/facebook.png" alt="Icon" />
                 </div>
             </div>
-            <h2 class="card-title">Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h2 class="card__title">Title</h2>
+            <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
 
-        <div class="card card-fourth-bg">
-            <div class="card-header">
-                <span class="card-number">04</span>
-                <div class="card-icon">
+        <div class="card
+                    card__background-color-fourth">
+            <div class="card__header">
+                <span class="card__number">04</span>
+                <div class="card__icon">
                     <img src="./images/instagram.png" alt="Icon" />
                 </div>
             </div>
-            <h2 class="card-title">Title</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h2 class="card__title">Title</h2>
+            <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
 
     </div>
